saves/test/demo_full_20240802_193545/review2015_fancytimer/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp review2015_fancytimer_tb.v review2015_fancytimer.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
review2015_fancytimer_tb.v:147: $finish called at 160280000 (1ps)

iverilog cmd 2 error:

